# ACI

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: ACI_gemini3.txt  ADVANCED_EXAMPLES.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  Google Gemini.mhtml  QUICK_START.md  USER_GUIDE.md
src/: __init__.py  graph_engine.py  model.py  persistence.py  server.py
tests/: test_advanced_examples.py  test_quick_start.py
