[project]
name = "aci-knowledge-graph"
version = "0.1.0"
description = "Agent-Computer-Interaction MCP server for scientific knowledge graph management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lancedb>=0.6.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "openai>=1.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
aci-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
